update : 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-oauth2-client') // 스프링 시큐리티 의존성
     implementation('org.springframework.session:spring-session-jdbc') // 세션 저장소 db 사용 의존성
     implementation('org.mariadb.jdbc:mariadb-java-client') // 마리아 DB 드라이버 등록
+    annotationProcessor 'org.projectlombok:lombok' // 롬복 인식
 
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation('org.springframework.security:spring-security-test') // 스프링 시큐리티 테스트 의존성
